# ctara-eph-core

./: .gitignore  AGENTS.md  CLAUDE.md  CLEAN_ROOM_RECORD_TEMPLATE.md  CONTRIBUTING.md  Cargo.toml  LICENSE_POLICY.md  README.md  THIRD_PARTY_NOTICES.md  deny.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: core-ci.yml  elixir-bindings.yml  go-bindings.yml  license-compliance.yml  node-bindings.yml  python-wheels.yml
bindings/elixir-open/: README.md
bindings/elixir-open/bench/: all_functions.exs
bindings/elixir-open/test/: ctara_dhruv_test.exs
bindings/go-open/: README.md
bindings/go-open/dhruv/: amsha_variations_test.go  dasha.go  engine.go  extras.go  integration_test.go  jyotish.go  panchang.go  shadbala.go  time.go  types.go
bindings/node-open/: README.md
bindings/node-open/examples/: basic.js
bindings/node-open/native/: dhruv_node.cc
bindings/node-open/scripts/: build-addon.mjs
bindings/node-open/src/: dasha.js  engine.js  extras.js  index.js  jyotish.js  panchang.js  search.js  shadbala.js  status.js  time.js
bindings/node-open/test/: dasha_tara.test.js  engine.test.js
bindings/python-open/: README.md  pyproject.toml  setup.py
bindings/python-open/scripts/: gen_cdef.py  prepare_native_lib.py
bindings/python-open/src/ctara_dhruv/: __init__.py  _cdef.py  _check.py  _ffi.py  _loader.py  amsha.py  ayanamsha.py  dasha.py  engine.py  enums.py  ephemeris.py  kundali.py  panchang.py  search.py  shadbala.py  tara.py  time.py  types.py  vedic.py
bindings/python-open/tests/: conftest.py  test_amsha.py  test_ayanamsha.py  test_dasha.py  test_engine.py  test_kundali.py  test_panchang.py  test_search.py  test_shadbala.py  test_tara.py  test_time.py  test_types.py  test_vedic.py
crates/dhruv_cli/: Cargo.toml
crates/dhruv_cli/src/: main.rs
crates/dhruv_cli/tests/: cli_integration.rs
crates/dhruv_config/src/: lib.rs
crates/dhruv_ffi_c/: Cargo.toml
crates/dhruv_ffi_c/benches/: ffi_bench.rs
crates/dhruv_ffi_c/include/: dhruv.h
crates/dhruv_ffi_c/src/: lib.rs
crates/dhruv_ffi_c/tests/: ffi_integration.rs
crates/dhruv_rs/: Cargo.toml
crates/dhruv_rs/benches/: rs_bench.rs
crates/dhruv_rs/src/: amsha.rs  context.rs  convenience.rs  error.rs  lib.rs  ops.rs
crates/dhruv_rs/tests/: integration.rs
crates/dhruv_search/: Cargo.toml
crates/dhruv_search/benches/: search_bench.rs
crates/dhruv_search/src/: conjunction.rs  dasha.rs  eclipse.rs  error.rs  grahan.rs  jyotish.rs  jyotish_types.rs  lib.rs  panchang.rs  panchang_types.rs  sankranti.rs  sankranti_types.rs  stationary.rs  stationary_types.rs
crates/dhruv_search/tests/: amsha_test.rs  avastha_test.rs  bindus_golden.rs  conjunction_golden.rs  dasha_test.rs  drishti_golden.rs  grahan_golden.rs  invariable_plane_test.rs  jyotish_dedup.rs  jyotish_golden.rs  lunar_phase_golden.rs  panchang_golden.rs  sankranti_golden.rs  shadbala_test.rs  stationary_golden.rs  tropical_longitudes.rs
crates/dhruv_vedic_base/: Cargo.toml
crates/dhruv_vedic_base/benches/: vedic_bench.rs
crates/dhruv_vedic_base/src/: amsha.rs  ashtakavarga.rs  avastha.rs  ayanamsha.rs  ayanamsha_anchor.rs  ayanamsha_tara.rs  bhava.rs  bhava_types.rs  combustion.rs  error.rs  graha.rs  graha_relationships.rs  lagna.rs  lib.rs  lunar_nodes.rs  nakshatra.rs  rashi.rs  riseset.rs  riseset_types.rs  shadbala.rs  special_lagna.rs  sphuta.rs  upagraha.rs  util.rs  vaar.rs  vimsopaka.rs
crates/dhruv_vedic_base/src/dasha/: balance.rs  chakra.rs  chara.rs  driga.rs  kaal_chakra.rs  kaal_chakra_data.rs  kala.rs  kendradi.rs  mandooka.rs  mod.rs  nakshatra.rs  rashi_dasha.rs  rashi_strength.rs  shoola.rs  sthira.rs  types.rs  yogardha.rs  yogini.rs
crates/dhruv_vedic_base/tests/: ayanamsha_anchor_invariants.rs  ayanamsha_catalog_consistency.rs  ayanamsha_golden.rs  bhava_golden.rs  dasha_test.rs  lunar_nodes_golden.rs  rashi_nakshatra_golden.rs  riseset_golden.rs
crates/dhruv_vedic_engine/: Cargo.toml
crates/dhruv_vedic_engine/src/: ayanamsha.rs  ayanamsha_anchor.rs  ayanamsha_tara.rs  bhava.rs  bhava_types.rs  error.rs  lagna.rs  lib.rs  riseset.rs  time_policy.rs
crates/dhruv_vedic_math/: Cargo.toml
crates/dhruv_vedic_ops/: Cargo.toml
crates/dhruv_vedic_ops/src/: dasha.rs  error.rs  jyotish.rs  jyotish_types.rs  lib.rs  operations.rs  panchang.rs  search_util.rs
crates/eph_cli/: Cargo.toml
crates/eph_core/: Cargo.toml
crates/eph_ffi_c/: Cargo.toml
crates/eph_frames/: Cargo.toml
crates/eph_time/: Cargo.toml
crates/eph_vedic_base/: Cargo.toml
crates/jpl_kernel/: Cargo.toml
docs/: ABI_WRAPPER_DUPLICATION_AUDIT.md  ABI_WRAPPER_DUPLICATION_FIX_PLAN.md  AMSHA_PARITY_CONTRACT.md  CORE_API_INVENTORY.md  CORE_RUNTIME_APIS.md  CORE_WRAPPER_COVERAGE.md  C_ABI_REFERENCE.md  FFI_BENCH_PLAN.md  FFI_VEDIC_DESIGN.md  FRAMES_API_INVENTORY.md  FRAMES_RUNTIME_APIS.md  FRAMES_WRAPPER_COVERAGE.md  JPL_KERNEL_API_INVENTORY.md  JPL_KERNEL_RUNTIME_APIS.md  JPL_KERNEL_WRAPPER_COVERAGE.md  PHASE1_PLAN.md  RELEASE_NOTES.md  SEARCH_API_INVENTORY.md  SEARCH_RUNTIME_APIS.md  SEARCH_WRAPPER_COVERAGE.md  SIMPLIFY_RISESET_DESIGN.md  SURFACE_DISCREPANCIES.md  TIME_API_INVENTORY.md  TIME_RUNTIME_APIS.md  TIME_WRAPPER_COVERAGE.md  UNIFIED_OPS_TRACKER.md  VEDIC_BASE_API_INVENTORY.md  VEDIC_BASE_DESIGN.md  VEDIC_BASE_RUNTIME_APIS.md  VEDIC_BASE_WRAPPER_COVERAGE.md  architecture.md  clean_room_amsha.md  clean_room_arudha.md  clean_room_ashtakavarga.md  clean_room_avastha.md  clean_room_ayanamsha.md  clean_room_bhava.md  clean_room_bhavabala.md  clean_room_charakaraka.md  clean_room_dasha.md  (+19 more)
docs/benchmarks/: ffi_bench_20260213T134349Z.txt  ffi_bench_20260213T134349Z_sorted.tsv
docs/end_user/: README.md
kernels/: README.md
kernels/manifest/: de441_de442_splits.tsv
scripts/ci/: check_header_sync.sh  license_gate.sh
scripts/kernels/: generate_split_kernels.sh  verify_split_kernel_manifest.py
(+89 files in other folders)
