[workspace]
members = [
  "crates/jpl_kernel",
  "crates/dhruv_time",
  "crates/dhruv_frames",
  "crates/dhruv_core",
  "crates/dhruv_vedic_math",
  "crates/dhruv_vedic_engine",
  "crates/dhruv_vedic_ops",
  "crates/dhruv_vedic_base",
  "crates/dhruv_config",
  "crates/dhruv_ffi_c",
  "crates/dhruv_cli",
  "crates/dhruv_rs",
  "crates/dhruv_search",
  "crates/dhruv_tara",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
