[package]
name = "dhruv_cli"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
dhruv_core   = { path = "../dhruv_core" }
dhruv_time   = { path = "../dhruv_time" }
dhruv_frames = { path = "../dhruv_frames" }
dhruv_config = { path = "../dhruv_config" }
dhruv_search = { path = "../dhruv_search" }
dhruv_vedic_ops = { path = "../dhruv_vedic_ops" }
dhruv_vedic_base = { path = "../dhruv_vedic_base" }
dhruv_tara       = { path = "../dhruv_tara" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "cli_bench"
harness = false
