[package]
name = "dhruv_ffi_c"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
dhruv_core = { path = "../dhruv_core" }
dhruv_config = { path = "../dhruv_config" }
dhruv_time = { path = "../dhruv_time" }
dhruv_frames = { path = "../dhruv_frames" }
dhruv_vedic_base = { path = "../dhruv_vedic_base" }
dhruv_search = { path = "../dhruv_search" }
dhruv_vedic_ops = { path = "../dhruv_vedic_ops" }
dhruv_tara = { path = "../dhruv_tara" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ffi_bench"
harness = false
