[package]
name = "dhruv_rs"
description = "Convenience wrapper for ctara-dhruv ephemeris engine"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
dhruv_core       = { path = "../dhruv_core" }
dhruv_config     = { path = "../dhruv_config" }
dhruv_time       = { path = "../dhruv_time" }
dhruv_frames     = { path = "../dhruv_frames" }
dhruv_vedic_base = { path = "../dhruv_vedic_base" }
dhruv_vedic_ops  = { path = "../dhruv_vedic_ops" }
dhruv_search     = { path = "../dhruv_search" }
dhruv_tara       = { path = "../dhruv_tara" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "rs_bench"
harness = false

[lints]
workspace = true
