[package]
name = "dhruv_search"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
dhruv_core       = { path = "../dhruv_core" }
dhruv_time       = { path = "../dhruv_time" }
dhruv_frames     = { path = "../dhruv_frames" }
dhruv_vedic_base = { path = "../dhruv_vedic_base" }
dhruv_vedic_math = { path = "../dhruv_vedic_math" }
dhruv_vedic_engine = { path = "../dhruv_vedic_engine" }
dhruv_tara       = { path = "../dhruv_tara" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "search_bench"
harness = false
