[package]
name = "dhruv_vedic_engine"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
dhruv_core = { path = "../dhruv_core" }
dhruv_time = { path = "../dhruv_time" }
dhruv_frames = { path = "../dhruv_frames" }
dhruv_tara = { path = "../dhruv_tara" }
dhruv_vedic_math = { path = "../dhruv_vedic_math" }

[dev-dependencies]
criterion = { workspace = true }
