[package]
name = "dhruv_vedic_ops"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
dhruv_core = { path = "../dhruv_core" }
dhruv_time = { path = "../dhruv_time" }
dhruv_frames = { path = "../dhruv_frames" }
dhruv_tara = { path = "../dhruv_tara" }
dhruv_search = { path = "../dhruv_search" }
dhruv_vedic_base = { path = "../dhruv_vedic_base" }
dhruv_vedic_math = { path = "../dhruv_vedic_math" }
dhruv_vedic_engine = { path = "../dhruv_vedic_engine" }

[dev-dependencies]
criterion = { workspace = true }
